# nightcafe

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  create_execution_db.sh  explore_execution_times.ipynb  explore_execution_times.py  pyproject.toml  query_examples.sql
.claude/: settings.local.json
data/: execution_data.parquet  file_timestamps_raw.csv
