[project]
name = "nightcafe"
version = "0.1.0"
description = "Analysis workspace for StarryNight CellProfiler output data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.1",
    "ipykernel>=6.29.5",
    "ipylab>=1.0.0",
    "marimo>=0.14.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pygwalker>=0.4.9.15",
    "seaborn>=0.13.2",
]
